--- a/app/src/main/res/drawable/bg_kind_item.xml
+++ b/app/src/main/res/drawable/bg_kind_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-<corners android:topRightRadius="16dp" android:bottomLeftRadius="16dp"/>
-<solid android:color="@color/light_green"/>
+<corners android:topRightRadius="10dp" android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp"/>
+<solid android:color="@color/white"/>
 </shape>
