--- a/app/src/main/res/layout/fragment_cancel_order_confirm.xml
+++ b/app/src/main/res/layout/fragment_cancel_order_confirm.xml
@@ -151,7 +151,7 @@
             android:textAllCaps="false"
             android:text="@string/continue_shopping"
             android:textColor="@color/white"
-            android:background="@color/dark_blue"
+            android:background="@color/active_button"
             android:layout_marginHorizontal="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
