--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -99,7 +99,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/bg_detail_product"
+            android:background="@color/back_ground"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
             <androidx.core.widget.NestedScrollView
@@ -107,7 +107,7 @@
                 android:layout_height="match_parent"
                 android:layout_above="@+id/bottomTools"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -118,7 +118,7 @@
                         android:id="@+id/productsInformation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginHorizontal="0dp"
                         android:orientation="vertical">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -143,7 +143,7 @@
                                 imagesData="@{viewModel.selectedProductImages}"
                                 android:layout_width="0dp"
                                 android:layout_height="0dp"
-                                android:layout_margin="10dp"
+                                android:layout_margin="0dp"
                                 android:background="@color/white"
                                 android:contentDescription="@string/image"
                                 android:scaleType="centerCrop"
@@ -151,26 +151,6 @@
                                 app:layout_constraintDimensionRatio="H,1:1"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <ImageView
-                                android:id="@+id/goToLeftImage"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:contentDescription="@string/image"
-                                android:src="@drawable/ic_left_cycle"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <ImageView
-                                android:id="@+id/goToRightImage"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:contentDescription="@string/image"
-                                android:src="@drawable/ic_right_cycle"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
                             <androidx.appcompat.widget.AppCompatToggleButton
@@ -188,6 +168,7 @@
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <LinearLayout
+                            android:layout_marginTop="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -217,7 +198,6 @@
                                 android:background="@color/black" />
 
                             <TextView
-
                                 android:id="@+id/purchase"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -244,6 +224,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:layout_marginBottom="10dp"
                             android:id="@+id/price"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -258,7 +239,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
                         android:background="@drawable/bg_detail_component"
                         android:orientation="vertical"
                         android:padding="20dp">
@@ -353,7 +333,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:layout_marginTop="-10dp"
+                        android:layout_marginTop="10dp"
                         android:background="@color/light_green"
                         android:elevation="2dp"
                         android:gravity="center_vertical">
@@ -393,7 +373,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="360dp"
-                        android:layout_marginTop="-13dp"
+                        android:layout_marginTop="10dp"
                         android:background="@drawable/bg_detail_component"
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
@@ -402,8 +382,8 @@
                             android:id="@+id/ratings"
                             ratings="@{viewModel.selectedProductRating}"
                             android:layout_width="match_parent"
-                            android:layout_height="280dp"
-                            android:layout_marginHorizontal="20dp"
+                            android:layout_height="290dp"
+                            android:layout_marginHorizontal="10dp"
                             android:layout_marginTop="20dp"
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                             tools:itemCount="3"
@@ -434,7 +414,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:layout_marginTop="-15dp"
+                        android:layout_marginTop="10dp"
                         android:background="@color/light_green"
                         android:elevation="2dp"
                         android:gravity="center_vertical">
@@ -476,17 +456,17 @@
                 <GridLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="5dp"
                     android:columnCount="2"
                     android:rowCount="1">
 
                     <androidx.appcompat.widget.AppCompatButton
+                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:id="@+id/addToCart"
                         android:layout_row="0"
                         android:layout_column="0"
                         android:layout_columnWeight="1"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="5dp"
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/bg_disable_button"
                         android:backgroundTint="@color/back_ground"
@@ -495,11 +475,12 @@
                         android:textStyle="normal" />
 
                     <androidx.appcompat.widget.AppCompatButton
+                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:id="@+id/buyNow"
                         android:layout_row="0"
                         android:layout_column="1"
                         android:layout_columnWeight="1"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginStart="5dp"
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/bg_active_button"
                         android:text="@string/buy_now"
