--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -11,11 +11,10 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-
             android:layout_width="match_parent"
             android:layout_height="115dp"
             android:layout_marginHorizontal="5dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginBottom="10dp"
             app:cardCornerRadius="5dp"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
