--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.cardview.widget.CardView
-            app:cardCornerRadius="15dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,21 +85,6 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <ToggleButton
-                    android:id="@+id/showAll"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_below="@id/status"
-                    android:layout_alignParentEnd="true"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="3dp"
-                    android:background="@drawable/selector_exspand_toggle"
-                    android:elevation="0dp"
-                    android:textAllCaps="false"
-                    android:textColor="@color/disable_pray"
-                    android:textOff=""
-                    android:textOn=""
-                    android:textStyle="normal" />
 
                 <TextView
                     android:id="@+id/address"
@@ -117,20 +102,7 @@
                     android:text="@string/billing_items"
                     android:textSize="16sp"
                     android:textStyle="bold" />
-                <ToggleButton
-                    android:id="@+id/showAllBillingItems"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_below="@id/address"
-                    android:layout_alignParentEnd="true"
-                    android:layout_gravity="end"
-                    android:background="@drawable/selector_exspand_toggle"
-                    android:elevation="0dp"
-                    android:textAllCaps="false"
-                    android:textColor="@color/disable_pray"
-                    android:textOff=""
-                    android:textOn=""
-                    android:textStyle="normal" />
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/billingItems"
@@ -142,12 +114,20 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:itemCount="2"
                     tools:listitem="@layout/item_order_biling" />
-
+                <TextView
+                    android:gravity="center"
+                    android:id="@+id/allOrder"
+                    android:layout_below="@id/billingItems"
+                    android:layout_marginVertical="5dp"
+                    android:textColor="@color/disable_pray"
+                    android:text="@string/see_all_items_in_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
                 <View
                     android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_below="@id/billingItems"
+                    android:layout_below="@id/allOrder"
                     android:layout_marginTop="5dp"
                     android:background="#F2F2F2" />
 
