--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -27,10 +27,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
+        android:layout_marginHorizontal="3dp"
         android:layout_width="match_parent"
         android:layout_height="196dp"
         android:shadowColor="@color/white"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="7dp"
         app:cardElevation="4dp">
         <!--Put automatic page view here-->
         <androidx.viewpager2.widget.ViewPager2
@@ -43,6 +44,7 @@
             android:id="@+id/indicator"
             android:layout_width="wrap_content"
             android:layout_height="15dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             indicatorSize="@{viewModel.listImage.size()}"
             app:ci_drawable="@drawable/bg_cycle_indicator"
@@ -54,9 +56,9 @@
     <LinearLayout
         android:layout_gravity="center"
         android:layout_marginTop="240dp"
-        android:paddingHorizontal="20dp"
+        android:paddingHorizontal="10dp"
         android:paddingVertical="35dp"
-        android:elevation="12dp"
+        android:elevation="5dp"
         android:background="@drawable/bg_information_about_us"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
