--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.AddressViewModel" />
     </data>
-    <LinearLayout
-        android:orientation="vertical"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/back_ground"
+        android:orientation="vertical"
         tools:context=".uicontroler.fragment.AddressFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
+            android:id="@+id/appBarLayout"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/back_ground"
             android:text="@string/app_name"
@@ -23,150 +27,128 @@
             app:elevation="0dp"
             app:liftOnScroll="false">
 
-                <androidx.appcompat.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/light_green"
+                app:layout_collapseMode="pin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_collapseMode="pin"
-                    android:background="@color/light_green"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:layout_marginHorizontal="20dp"
+                    android:gravity="center|top"
+                    android:orientation="vertical"
+                    android:paddingBottom="15dp">
 
-                    <LinearLayout
+
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
-                        android:gravity="center|top"
-                        android:orientation="vertical"
-                        android:paddingBottom="15dp">
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
 
-
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
+                        <ImageView
+                            android:id="@+id/img_back"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
                             android:layout_marginTop="10dp"
-                            android:orientation="horizontal">
+                            android:contentDescription="@string/image"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_back_white" />
+
+                        <TextView
+                            android:id="@+id/title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginEnd="50dp"
+                            android:text="My address"
+                            android:textColor="@color/white"
+                            android:textSize="30sp"
+                            android:textStyle="bold" />
+
+                        <androidx.coordinatorlayout.widget.CoordinatorLayout
+                            android:id="@+id/cl_cart"
+                            android:layout_width="33dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginTop="5dp">
 
                             <ImageView
-                                android:id="@+id/img_back"
-                                android:layout_alignParentStart="true"
-                                android:layout_marginTop="10dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:id="@+id/img_cart"
+                                android:layout_width="26dp"
+                                android:layout_height="26dp"
+                                android:layout_gravity="bottom|left"
                                 android:contentDescription="@string/image"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/ic_back_white"/>
+                                android:src="@drawable/ic_cart"
+                                app:tint="@color/white"
+                                tools:ignore="RtlHardcoded" />
 
                             <TextView
-                                android:id="@+id/title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginEnd="50dp"
-                                android:text="My address"
+                                android:layout_width="14dp"
+                                android:layout_height="14dp"
+                                android:layout_gravity="right|top"
+                                android:background="@drawable/bg_quantity_in_cart"
+                                android:text="1"
+                                android:textAlignment="center"
                                 android:textColor="@color/white"
-                                android:textSize="30sp"
-                                android:textStyle="bold" />
+                                android:textSize="10dp"
+                                tools:ignore="RtlCompat" />
+                        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-                            <androidx.coordinatorlayout.widget.CoordinatorLayout
-                                android:layout_width="33dp"
-                                android:layout_height="30dp"
-                                android:layout_marginTop="5dp"
-                                android:id="@+id/cl_cart"
-                                android:layout_alignParentEnd="true">
-                                <ImageView
-                                    android:layout_width="26dp"
-                                    android:layout_height="26dp"
-                                    android:layout_gravity="bottom|left"
-                                    android:contentDescription="@string/image"
-                                    android:src="@drawable/ic_cart"
-                                    android:id="@+id/img_cart"
-                                    tools:ignore="RtlHardcoded"
-                                    app:tint="@color/white" />
-                                <TextView
-                                    android:layout_gravity="right|top"
-                                    android:layout_width="14dp"
-                                    android:layout_height="14dp"
-                                    android:background="@drawable/bg_quantity_in_cart"
-                                    android:textSize="10dp"
-                                    android:text="1"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/white"
-                                    tools:ignore="RtlCompat" />
-                            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/title"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginEnd="10dp"
-                                android:text="Tap to select default address"
-                                android:textColor="#272422"
-                                android:textSize="16dp" />
-                        </RelativeLayout>
-                    </LinearLayout>
-                </androidx.appcompat.widget.Toolbar>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/title"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:text="Tap to select default address"
+                            android:textColor="#272422"
+                            android:textSize="16dp" />
+                    </RelativeLayout>
+                </LinearLayout>
+            </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
+
         <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_above="@id/tv_add_new_address"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="20dp"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:layout_below="@id/appBarLayout"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rc_address"
                 listAddress="@{viewModel.listAddress}"
                 android:layout_width="match_parent"
-                android:layout_height="390dp"
-                tools:listitem="@layout/item_address"/>
-            <TextView
-                android:id="@+id/tv_add_new_address"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tap to add new address"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:textColor="#060DD9"/>
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_address" />
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
-            android:orientation="horizontal"
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:textAllCaps="false"
+            android:id="@+id/tv_add_new_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_ln_bottom_address"
-            android:layout_gravity="bottom"
-            android:paddingTop="13dp"
-            android:gravity="center"
-            android:paddingBottom="18dp">
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="157dp"
-                android:layout_height="45dp"
-                android:text="Delete"
-                android:textSize="14dp"
-                android:id="@+id/btn_delete"
-                android:layout_marginRight="8dp"
-                android:textAllCaps="false"
-                android:background="@drawable/bg_delete_address"/>
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_editDefault"
-                android:layout_width="157dp"
-                android:layout_height="45dp"
-                android:text="Edit"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:layout_marginLeft="8dp"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:background="@drawable/bg_edit_address"/>
-        </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="11dp"
+            android:background="@drawable/bg_rating_now_button"
+            android:text="Tap to add new address"
+            android:textColor="#060DD9"
+            android:textSize="16dp"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
 </layout>
