--- a/app/src/main/res/layout/fragment_finish_check_out.xml
+++ b/app/src/main/res/layout/fragment_finish_check_out.xml
@@ -40,14 +40,16 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_checkout_success"/>
             <TextView
+                android:textAllCaps="true"
                 android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your order placed"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:textSize="20dp"/>
+                android:textSize="25sp"/>
             <TextView
+                android:textStyle="bold"
                 android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,6 +57,7 @@
                 android:textColor="@color/white"
                 android:textSize="14dp"/>
             <TextView
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="my order to check the delivery process"
