--- a/app/src/main/res/layout/fragment_rated.xml
+++ b/app/src/main/res/layout/fragment_rated.xml
@@ -1,143 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.RatedViewModel" />
     </data>
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/back_ground"
+        android:orientation="vertical"
         tools:context=".uicontroler.fragment.RatedFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/back_ground"
-        android:text="@string/app_name"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
-        app:elevation="0dp"
-        app:liftOnScroll="false">
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:expandedTitleGravity="top"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <androidx.constraintlayout.widget.ConstraintLayout
+            android:backgroundTint="@color/back_ground"
+            android:text="@string/app_name"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:elevation="0dp"
+            app:liftOnScroll="false">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
-                android:gravity="bottom"
-                android:orientation="vertical">
+                app:expandedTitleGravity="top"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <androidx.appcompat.widget.Toolbar
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#00000000"
-                    app:layout_collapseMode="pin"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:background="@color/light_green"
+                    android:gravity="bottom"
+                    android:orientation="vertical">
 
-                    <LinearLayout
+                    <androidx.appcompat.widget.Toolbar
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
-                        android:gravity="center|top"
-                        android:orientation="vertical"
-                        android:paddingBottom="15dp">
+                        android:background="#00000000"
+                        app:layout_collapseMode="pin"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
-                        <RelativeLayout
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:orientation="horizontal">
+                            android:layout_marginHorizontal="20dp"
+                            android:gravity="center|top"
+                            android:orientation="vertical"
+                            android:paddingBottom="15dp">
 
-                            <ImageView
-                                android:id="@+id/img_back"
-                                android:layout_alignParentStart="true"
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:contentDescription="@string/image"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/ic_back_white"/>
+                                android:orientation="horizontal">
 
-                            <TextView
-                                android:id="@+id/title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginEnd="50dp"
-                                android:text="Rating"
-                                android:textColor="@color/white"
-                                android:textSize="30sp"
-                                android:textStyle="bold" />
-
-                            <androidx.coordinatorlayout.widget.CoordinatorLayout
-                                android:layout_width="33dp"
-                                android:layout_height="30dp"
-                                android:layout_marginTop="5dp"
-                                android:id="@+id/cl_cart"
-                                android:layout_alignParentEnd="true">
                                 <ImageView
-                                    android:layout_width="26dp"
-                                    android:layout_height="26dp"
-                                    android:layout_gravity="bottom|left"
+                                    android:id="@+id/img_back"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentStart="true"
+                                    android:layout_marginTop="10dp"
                                     android:contentDescription="@string/image"
-                                    app:tint="@color/white"
-                                    android:src="@drawable/ic_cart"
-                                    android:id="@+id/img_cart"
-                                    tools:ignore="RtlHardcoded" />
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/ic_back_white" />
+
                                 <TextView
-                                    android:layout_gravity="right|top"
-                                    android:layout_width="14dp"
-                                    android:layout_height="14dp"
-                                    android:background="@drawable/bg_quantity_in_cart"
-                                    android:textSize="10dp"
-                                    android:text="1"
-                                    android:textAlignment="center"
+                                    android:id="@+id/title"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginEnd="50dp"
+                                    android:text="Rating"
                                     android:textColor="@color/white"
-                                    tools:ignore="RtlCompat" />
-                            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                                    android:textSize="30sp"
+                                    android:textStyle="bold" />
+
+                                <androidx.coordinatorlayout.widget.CoordinatorLayout
+                                    android:id="@+id/cl_cart"
+                                    android:layout_width="33dp"
+                                    android:layout_height="30dp"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginTop="5dp">
+
+                                    <ImageView
+                                        android:id="@+id/img_cart"
+                                        android:layout_width="26dp"
+                                        android:layout_height="26dp"
+                                        android:layout_gravity="bottom|left"
+                                        android:contentDescription="@string/image"
+                                        android:src="@drawable/ic_cart"
+                                        app:tint="@color/white"
+                                        tools:ignore="RtlHardcoded" />
+
+                                    <TextView
+                                        android:layout_width="14dp"
+                                        android:layout_height="14dp"
+                                        android:layout_gravity="right|top"
+                                        android:background="@drawable/bg_quantity_in_cart"
+                                        android:text="1"
+                                        android:textAlignment="center"
+                                        android:textColor="@color/white"
+                                        android:textSize="10dp"
+                                        tools:ignore="RtlCompat" />
+                                </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/title"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginEnd="10dp"
-                                android:text="Tap to view detail or change"
-                                android:textColor="#272422"
-                                android:textSize="16dp" />
-                        </RelativeLayout>
-                    </LinearLayout>
-                </androidx.appcompat.widget.Toolbar>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@id/title"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:text="Tap to view detail or change"
+                                    android:textColor="#272422"
+                                    android:textSize="16dp" />
+                            </RelativeLayout>
+                        </LinearLayout>
+                    </androidx.appcompat.widget.Toolbar>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingHorizontal="20dp"
-            android:clipToPadding="false">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/item_rated"
-            android:layout_marginTop="3dp"
-            tools:itemCount="3"
             android:clipToPadding="false"
-            android:layout_marginBottom="60dp"
-            android:id="@+id/rc_rated"
-            listRated="@{viewModel.listRated}"/>
+            android:layout_marginTop="7dp"
+            android:paddingHorizontal="7dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rc_rated"
+                listRated="@{viewModel.listRated}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                tools:itemCount="3"
+                tools:listitem="@layout/item_rated" />
         </LinearLayout>
     </LinearLayout>
 
