--- a/app/src/main/res/layout/fragment_rating.xml
+++ b/app/src/main/res/layout/fragment_rating.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
->
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.RatingViewModel" />
     </data>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/back_ground"
+        android:orientation="vertical"
         tools:context=".uicontroler.fragment.RatingFragment">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -25,11 +25,13 @@
             android:theme="@style/ThemeOverlay.AppCompat.Light"
             app:elevation="0dp"
             app:liftOnScroll="false">
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:expandedTitleGravity="top"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -84,29 +86,31 @@
                                     android:textStyle="bold" />
 
                                 <androidx.coordinatorlayout.widget.CoordinatorLayout
+                                    android:id="@+id/cl_cart"
                                     android:layout_width="33dp"
                                     android:layout_height="30dp"
-                                    android:layout_marginTop="5dp"
-                                    android:id="@+id/cl_cart"
-                                    android:layout_alignParentEnd="true">
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginTop="5dp">
+
                                     <ImageView
+                                        android:id="@+id/img_cart"
                                         android:layout_width="26dp"
                                         android:layout_height="26dp"
                                         android:layout_gravity="bottom|left"
                                         android:contentDescription="@string/image"
-                                        app:tint="@color/white"
                                         android:src="@drawable/ic_cart"
-                                        android:id="@+id/img_cart"
+                                        app:tint="@color/white"
                                         tools:ignore="RtlHardcoded" />
+
                                     <TextView
-                                        android:layout_gravity="right|top"
                                         android:layout_width="14dp"
                                         android:layout_height="14dp"
+                                        android:layout_gravity="right|top"
                                         android:background="@drawable/bg_quantity_in_cart"
-                                        android:textSize="10dp"
                                         android:text="1"
                                         android:textAlignment="center"
                                         android:textColor="@color/white"
+                                        android:textSize="10dp"
                                         tools:ignore="RtlCompat" />
                                 </androidx.coordinatorlayout.widget.CoordinatorLayout>
                             </RelativeLayout>
@@ -115,120 +119,176 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_rated_item"
-            android:elevation="8dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
-            android:paddingHorizontal="20dp">
-            <ImageView
-                android:layout_width="63dp"
-                android:layout_height="63dp"
-                image="@{viewModel.currentRatingItem.image.imageUri}"
-                android:layout_gravity="center" />
+            android:layout_height="match_parent">
+
             <LinearLayout
+                android:id="@+id/productsInformation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="10dp"
-                android:paddingLeft="10dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewModel.currentRatingItem.name}"
-                    android:textSize="12dp"
-                    android:textStyle="bold"
-                    android:textColor="#272422"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewModel.currentRatingItem.property}"
-                    android:textSize="12dp"
-                    android:textColor="#262626"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14dp"
-                    android:textColor="#060DD9"
-                    android:textStyle="bold"
-                    android:text="@{viewModel.currentRatingItem.priceFormat}" />
-                <TextView
-                    android:layout_marginBottom="8dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewModel.currentRatingItem.amountFormat}"
-                    android:textSize="12dp"
-                    android:textColor="#262626"/>
-            </LinearLayout>
-        </LinearLayout>
-        <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:scaleX="0.7"
-            android:scaleY="0.7"
-            android:numStars="5"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:paddingHorizontal="20dp"
-            android:orientation="horizontal">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="wrap_content"
-            android:layout_height="99dp"
-            android:layout_gravity="center_vertical"
-            tools:listitem="@layout/item_img_add_rating"
-            android:layout_marginRight="10dp"
-            listOnRatingImage="@{viewModel.listChoseImage}"
-            android:id="@+id/rc_rate_img"/>
-            <LinearLayout
-                android:id="@+id/ln_add_img"
-                android:layout_width="99dp"
-                android:layout_height="99dp"
-                android:background="@drawable/bg_add_rate_image"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:layout_alignParentTop="true"
+                android:background="@color/white"
+                android:elevation="3dp"
+                android:paddingHorizontal="20dp">
+
                 <ImageView
-                    android:id="@+id/img_camera"
-                    android:layout_width="wrap_content"
+                    image="@{viewModel.currentRatingItem.image.imageUri}"
+                    android:layout_width="63dp"
+                    android:layout_height="63dp"
+                    android:layout_gravity="center" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/img_camera"
-                    android:layout_centerInParent="true" />
-                <TextView
-                    android:id="@+id/tv_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0/3"
-                    android:textColor="#ADADAD"
-                    android:textSize="12dp"
-                    android:layout_centerInParent="true"/>
+                    android:orientation="vertical"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.currentRatingItem.name}"
+                        android:textColor="#272422"
+                        android:textSize="12dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.currentRatingItem.property}"
+                        android:textColor="#262626"
+                        android:textSize="12dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.currentRatingItem.priceFormat}"
+                        android:textColor="#060DD9"
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:text="@{viewModel.currentRatingItem.amountFormat}"
+                        android:textColor="#262626"
+                        android:textSize="12dp" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:layout_marginTop="10dp"
-            android:paddingHorizontal="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-            <com.google.android.material.textfield.TextInputEditText
+
+            <RatingBar
+                android:id="@+id/rating"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_below="@+id/productsInformation"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:numStars="5"
+                android:scaleX="0.7"
+                android:scaleY="0.7" />
+            <LinearLayout
+                android:id="@+id/addImage"
+                android:layout_marginHorizontal="10dp"
+                android:layout_below="@id/content"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="14dp"
-                android:gravity="left|top"
-                android:textColor="#262626"/>
-        </com.google.android.material.textfield.TextInputLayout>
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_saveRate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/bg_confirm_check_out"
-            android:layout_marginHorizontal="20dp"
-            android:text="Save"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
+                android:layout_height="wrap_content">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/buttonAddImage"
+                    android:textStyle="bold"
+                    android:textColor="@color/active_button"
+                    android:background="@drawable/bg_rating_now_button"
+                    android:layout_width="match_parent"
+                    android:text="@string/add_image"
+                    android:layout_height="50dp"/>
+                <LinearLayout
+                    android:layout_gravity="center"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rc_rate_img"
+                        listOnRatingImage="@{viewModel.listChoseImage}"
+                        android:layout_width="wrap_content"
+                        android:layout_height="99dp"
+                        android:layout_gravity="center_vertical"
+                        tools:listitem="@layout/item_img_add_rating" />
+
+                    <LinearLayout
+                        android:visibility="gone"
+                        android:id="@+id/ln_add_img"
+                        android:layout_width="99dp"
+                        android:layout_height="99dp"
+                        android:background="@drawable/bg_add_rate_image"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:scaleX="1.5"
+                            android:scaleY="1.5"
+                            android:id="@+id/img_camera"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:src="@drawable/ic_camera" />
+
+                        <TextView
+                            android:id="@+id/tv_amount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="0/3"
+                            android:textColor="#ADADAD"
+                            android:textSize="12dp" />
+                    </LinearLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/content"
+                android:layout_below="@id/rating"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                app:boxStrokeColor="@color/disable_pray"
+                android:layout_height="190dp"
+                android:focusable="false"
+                app:hintEnabled="false"
+                android:layout_marginVertical="10dp"
+                android:layout_marginTop="10dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="200"
+                android:paddingHorizontal="10dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:hint="@string/write_your_comment_here"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="match_parent"
+                    android:gravity="start|top"
+                    android:textColor="#262626"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_marginVertical="10dp"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/btn_saveRate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_confirm_check_out"
+                android:text="Save"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+        </RelativeLayout>
     </LinearLayout>
 </layout>
