--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -1,64 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout  xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="address"
             type="com.example.aposs_buyer.model.Address" />
     </data>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/ln_item_address"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@drawable/bg_address_item"
-    android:paddingVertical="20dp"
-    android:paddingHorizontal="20dp">
+
     <LinearLayout
+        android:layout_marginHorizontal="3dp"
+        android:id="@+id/ln_item_address"
+        android:elevation="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/bg_address_item"
+        android:orientation="vertical"
+        android:paddingHorizontal="10dp"
+        android:paddingBottom="20dp"
+        android:paddingVertical="20dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/isDefault"
+                android:textColor="@color/active_button"
+                android:text="[ Default ]"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                app:tint="@color/active_button"
+                android:id="@+id/editAddress"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentEnd="true"
+                android:contentDescription="@string/image"
+                android:src="@drawable/ic_address_edit" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{address.nameString}"
+                android:textSize="14sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="@{address.genderString}"
+                android:textSize="14sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="@{address.phoneNumberString}"
+                android:textSize="14sp" />
+
+            <TextView
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="@{address.cityString}"
+                android:textSize="14sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="@{address.districtString}"
+                android:textSize="14sp" />
+
+            <TextView
+               android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="@{address.wardString}"
+                android:textSize="14sp" />
+        </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{address.nameString}"
-            android:textSize="12dp"/>
-        <TextView
-            android:gravity="right"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:text="@{address.genderString}"/>
+            android:layout_marginTop="7dp"
+            android:text="@{address.addressLaneString}"
+            android:textSize="14sp" />
     </LinearLayout>
-    <TextView
-        android:layout_marginTop="7dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@{address.phoneNumberString}"
-        android:textSize="12dp"/>
-    <TextView
-        android:layout_marginTop="7dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:text="@{address.cityString}"/>
-    <TextView
-        android:layout_marginTop="7dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@{address.districtString}"
-        android:textSize="12dp"/>
-    <TextView
-        android:layout_marginTop="7dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12dp"
-        android:text="@{address.wardString}"/>
-    <TextView
-        android:layout_marginTop="7dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@{address.addressLaneString}"
-        android:textSize="12dp"/>
-</LinearLayout>
 </layout>
