--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -6,124 +6,144 @@
         <variable
             name="cartItem"
             type="com.example.aposs_buyer.model.CartItem" />
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.CartViewModel" />
     </data>
 
-    <com.google.android.material.card.MaterialCardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
         android:id="@+id/card_cart_item"
+        android:layout_width="match_parent"
         android:layout_height="124dp"
         android:layout_marginHorizontal="3dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/bg_cart_item"
         android:checkable="true"
+        android:checked="@{cartItem.choose}"
         android:focusable="true"
         app:cardCornerRadius="5dp"
-        android:checked="@{cartItem.choose}"
-        android:background="@drawable/bg_cart_item"
         app:cardElevation="5dp"
         app:strokeColor="#A4858C94">
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-        <ImageView
-            image="@{cartItem.image.imageUri}"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp" />
-        <LinearLayout
-            android:layout_gravity="center_vertical"
-            android:layout_centerVertical="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:layout_marginEnd="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{cartItem.name}"
-                android:textSize="12dp"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{cartItem.property}"
-                android:textSize="12dp"
-                android:textStyle="bold" />
+            <View
+                android:id="@+id/isChosenFalse"
+                android:layout_margin="10dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/ic_is_choosen_false"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{cartItem.priceFormat}"
-                android:textColor="@color/active_button"
-                android:textSize="14dp"
-                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/image"
+                image="@{cartItem.image.imageUri}"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp" />
 
             <LinearLayout
+                android:layout_toEndOf="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="4dp">
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@{cartItem.name}"
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Amount: "
+                    android:text="@{cartItem.property}"
                     android:textSize="12dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{cartItem.priceFormat}"
+                    android:textColor="@color/active_button"
+                    android:textSize="14dp"
                     android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:paddingRight="10dp">
+                    android:paddingVertical="4dp">
 
-                    <LinearLayout
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/bg_adding_amount"
-                        android:orientation="horizontal"
-                        android:paddingVertical="4dp"
-                        tools:ignore="RtlHardcoded">
-                        <LinearLayout
-                            android:id="@+id/img_minus"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-                        <ImageView
+                        android:layout_gravity="center"
+                        android:text="Amount: "
+                        android:textSize="12dp"
+                        android:textStyle="bold" />
 
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="10dp"
-                            android:src="@drawable/ic_minus" />
-                        </LinearLayout>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="10dp"
-                            android:text="@{String.valueOf(cartItem.amount)}"
-                            android:textSize="16dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:paddingRight="10dp">
+
                         <LinearLayout
-                            android:id="@+id/img_plus"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-                        <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="10dp"
-                            android:src="@drawable/ic_plus" />
+                            android:background="@drawable/bg_adding_amount"
+                            android:orientation="horizontal"
+                            android:paddingVertical="4dp"
+                            tools:ignore="RtlHardcoded">
+
+                            <LinearLayout
+                                android:id="@+id/img_minus"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginHorizontal="10dp"
+                                    android:src="@drawable/ic_minus" />
+                            </LinearLayout>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginHorizontal="10dp"
+                                android:text="@{String.valueOf(cartItem.amount)}"
+                                android:textSize="16dp" />
+
+                            <LinearLayout
+                                android:id="@+id/img_plus"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginHorizontal="10dp"
+                                    android:src="@drawable/ic_plus" />
+                            </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-
-        </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
