--- a/app/src/main/res/layout/item_need_rating.xml
+++ b/app/src/main/res/layout/item_need_rating.xml
@@ -19,7 +19,9 @@
             app:layout_constraintTop_toTopOf="parent"
             app:cardElevation="5dp"
             app:cardCornerRadius="5dp"
-            android:layout_margin="7dp"
+            android:layout_marginHorizontal="7dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="10dp"
             >
             <LinearLayout
                 android:layout_width="match_parent"
