--- a/app/src/main/res/layout/item_order_biling.xml
+++ b/app/src/main/res/layout/item_order_biling.xml
@@ -30,14 +30,31 @@
                 android:src="@mipmap/ic_launcher_round_w" />
 
             <TextView
+                android:id="@+id/amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/image"
+                android:text="@{billingItem.amountToString()}"
+                android:textStyle="bold" />
+            <TextView
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:layout_toEndOf="@+id/image"
+                android:layout_marginEnd="5dp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:layout_toEndOf="@+id/amount"
+                android:layout_toStartOf="@+id/totalPrice"
                 android:text="@{billingItem.name}"
                 android:textStyle="bold" />
-
+            <TextView
+                android:id="@+id/totalPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="@{billingItem.totalPriceToString}"
+                android:textStyle="normal" />
             <TextView
                 android:id="@+id/property"
                 android:layout_width="match_parent"
@@ -54,17 +71,7 @@
                 android:layout_below="@+id/property"
                 android:layout_marginHorizontal="10dp"
                 android:layout_toEndOf="@+id/image"
-                android:text="@string/amount"
-                android:textStyle="normal" />
-
-            <TextView
-                android:id="@+id/amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/property"
-                android:layout_marginStart="5dp"
-                android:layout_toEndOf="@+id/amountText"
-               android:text="@{String.valueOf(billingItem.amount)}"
+                android:text="@string/default_price"
                 android:textStyle="normal" />
 
             <TextView
@@ -72,9 +79,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/property"
-                android:layout_alignParentEnd="true"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/amountText"
                 android:text="@{billingItem.priceToString()}"
                 android:textStyle="normal" />
+
+
         </RelativeLayout>
 
 
