--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Apossbuyer" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
@@ -11,7 +11,7 @@
         <item name="android:windowFullscreen">true</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/black</item>
-<!--     default text style-->
+        <!--     default text style-->
         <item name="android:textSize">14sp</item>
         <item name="android:screenOrientation">locked</item>
         <item name="android:statusBarColor">@color/light_green</item>
@@ -20,16 +20,16 @@
 
     <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
 
-    <item name="android:typeface">monospace</item>
-    <item name="android:background">@drawable/bg_ln_bottom_address</item>
-</style>
+        <item name="android:typeface">monospace</item>
+        <item name="android:background">@drawable/bg_ln_bottom_address</item>
+    </style>
 
-<style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
-<item name="android:windowIsFloating">false</item>
-<item name="android:typeface">monospace</item>
-<item name="bottomSheetStyle">@style/BottomSheet</item>
-</style>
+    <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:typeface">monospace</item>
+        <item name="bottomSheetStyle">@style/BottomSheet</item>
+    </style>
 
-<style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />
+    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />
 
 </resources>
