--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -24,24 +24,23 @@
 
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBarLayout"
-                android:layout_alignParentTop="true"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
+                android:layout_alignParentTop="true"
                 android:backgroundTint="@color/back_ground"
                 android:text="@string/app_name"
-                android:theme="@style/ThemeOverlay.AppCompat.Light"
-                >
+                android:theme="@style/ThemeOverlay.AppCompat.Light">
 
                 <com.google.android.material.appbar.CollapsingToolbarLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:expandedTitleGravity="top"
-                    >
+                    app:expandedTitleGravity="top">
+
                     <androidx.appcompat.widget.Toolbar
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/light_green"
-                        >
+                        android:background="@color/light_green">
+
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -134,40 +133,25 @@
                     android:orientation="vertical"
                     android:visibility="visible">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/cart_empty_1"
-                        android:textAlignment="center"
-                        android:textColor="@color/dark_pray"
-                        android:textSize="16dp" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/cart_empty_2"
-                            android:textAlignment="center"
-                            android:textColor="@color/dark_pray"
-                            android:textSize="16dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="4dp"
-                            android:text="categories"
-                            android:textColor="@color/red"
-                            android:textSize="16dp" />
-                    </LinearLayout>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
                         android:src="@drawable/ic_empty_cart" />
+                    <TextView
+                        android:id="@+id/loadingMessage"
+                        android:layout_marginTop="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cart_empty_2"
+                        android:textAlignment="center"
+                        android:textColor="@color/dark_pray"
+                        android:textSize="16sp" />
+                    <ProgressBar
+                        android:id="@+id/loadingProgress"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"/>
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
 
@@ -176,56 +160,60 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/checkout_layout"
-                android:layout_marginHorizontal="10dp"
                 android:layout_below="@id/appBarLayout"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginVertical="10dp"
                 android:visibility="gone">
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="100dp"
-                        android:orientation="vertical"
-                        android:windowSoftInputMode="adjustResize">
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rc_cart"
-                            isCheckOut="@{2}"
-                            listCart="@{viewModel.lstCartItem}"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="100dp"
-                            tools:itemCount="1"
-                            tools:listitem="@layout/item_cart" />
-                    </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="100dp"
+                    android:orientation="vertical"
+                    android:windowSoftInputMode="adjustResize">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rc_cart"
+                        isCheckOut="@{2}"
+                        listCart="@{viewModel.lstCartItem}"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="100dp"
+                        tools:itemCount="1"
+                        tools:listitem="@layout/item_cart" />
+                </RelativeLayout>
             </androidx.core.widget.NestedScrollView>
+
             <LinearLayout
-                android:visibility="visible"
-                android:gravity="bottom"
                 android:id="@+id/checkout_layout"
-                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:background="@drawable/bg_cart_item"
+                android:gravity="bottom"
                 android:orientation="vertical"
                 android:paddingHorizontal="15dp"
-                android:paddingVertical="10dp">
+                android:paddingVertical="10dp"
+                android:visibility="visible">
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content">
+
                     <TextView
-                        android:layout_marginBottom="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
                         android:text="@string/total"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <LinearLayout
-                        android:layout_marginBottom="5dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
                         android:gravity="end">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -234,6 +222,7 @@
                             android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
+
                 <Button
                     android:id="@+id/btn_go_to_check_out"
                     android:layout_width="match_parent"
