--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -29,7 +29,7 @@
                 image="@{rating.avatar.imageUri}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/light_green"
+                android:background="@color/white"
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop" />
         </androidx.cardview.widget.CardView>
